# fromthetensor

./: README.md  ideas.md  linear.py  mnist.py  pong.py  pyproject.toml  tensor.py
examples/: alexnet.ipynb  bert.ipynb  cbow_skipgram.ipynb  cifar_alexnet.ipynb  cifar_resnet.ipynb  cnn.ipynb  data.py  dcgan.ipynb  gpt2.ipynb  gru_lstm.ipynb  helpers.py  lenet.ipynb  mnist_cnn.ipynb  mnist_dcgan.ipynb  mnist_from_scratch.ipynb  mnist_gan.ipynb  mnist_lenet.ipynb  mnist_resnet.ipynb  names_rnn.ipynb  resnet.ipynb  rnn.ipynb  stable_diffusion.ipynb  training.py  transformer.ipynb
examples/attention_residuals/: attention_residuals.py  bpe_tokenizer.py  train.py
examples/custom_dataset/: eda.ipynb  evaluate_model.ipynb  generate_features.ipynb  train_model.ipynb
examples/multigpu/: baseline.py  helpers.py
extra/: rnnt_torch.py
notebooks/: mnist_from_scratch.ipynb
src/: linear.py  mnist.py  pong.py
