[project]
name = "fromthetensor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "pillow>=11.1.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
